Wire Spring processing pipeline
Change-Id: Id01208a9176d0bcee7bb3049b7024bb4dc3121d2